Fixed overflow in vbox and views.

--- a/front-end/inspectorCommon.css
+++ b/front-end/inspectorCommon.css
@@ -102,6 +102,7 @@ body /deep/ .vbox {
     display: flex;
     flex-direction: column !important;
     position: relative;
+    overflow: auto;
 }
 
 body /deep/ .flex-auto {
